--- a/html/kadai_005.html
+++ b/html/kadai_005.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+      <h1>5章課題</h1>
+      <meta name="discription" content="このページは5章の課題です。">
+     <meta charset="utf-8"> 
   </head>
-   <h1>私の趣味</h1>
-   <meta charset="utf-8">
-   <body>
-      <p>私は中学時代サッカーを始めました。<br>現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。</p>
+  <body>
+     <h1>私の趣味</h1>
+     <p>私は中学時代サッカーを始めました。<br>現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。</p>
       <img src="../images/sample.jpg">
-     <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら
-     </a>
-    </body>
+      <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら
+      </a>
+  </body>
 </html>
