--- a/html/kadai_005.html
+++ b/html/kadai_005.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <h1>5章課題</h1>
+      <title>5章課題</title>
       <meta name="discription" content="このページは5章の課題です。">
      <meta charset="utf-8"> 
   </head>
