--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -5,7 +5,9 @@
     <meta name="description" content="このページは8章の課題です">
     <meta charset="utf-8">
   </head>
+
   <body>
+
     <header>
       <h1>SAMURAIニュース</h1>
      
@@ -19,6 +21,7 @@
 
     </header>
 
+    <main>
       <article>
         <section>
           <h2>社会</h2>
@@ -62,8 +65,8 @@
         <input type="checkbox">
         <br>
 
-        <input type="submit">
-        <input type="reset">
+        <input type="submit" value="送信">
+        <input type="reset" value="リセット">
         <br>
       </section>
 
@@ -87,8 +90,10 @@
       </section>
 
       </article>
+    </main>
+ 
+    <footer>
+      <p>&copy; SAMURAIニュース</p>
+   </footer>
   </body>
-  <hooter>
-    <p>&copy; SAMURAIニュース</p>
-  </hooter>
 </html>
