--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -23,6 +23,7 @@
 
     <main>
       <article>
+        
         <section>
           <h2>社会</h2>
           <h3>和菓子店も「トリックオアトリート！」</h3>
@@ -34,6 +35,8 @@
         <audio src="ichi.mp3" controls></audio>
 
         <h3>「私のおすすめ和菓子アンケートフォーム」</h3>
+
+        <form>
 
         <label>氏名</label>
         <input type="text" placeholder="名前を入力してください">
@@ -68,6 +71,8 @@
         <input type="submit" value="送信">
         <input type="reset" value="リセット">
         <br>
+
+      </form>
       </section>
 
       <section>
